<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/com.example.android.sunshine.app">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/temperature_units_array"
        android:entryValues="@array/temperature_units_values" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:summaryOff="@string/pref_enable_notifications_false"/>

</PreferenceScreen>